--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-Программа 8ball даёт ответ на любой вопрос задуманный пользователем.
+8ball является ruby приложением.
+Программа даёт ответ на любой вопрос задуманный пользователем.
 Выбор осуществляется из 20-ти случайных вариантов ответа.
+
+Для запуска из папки с программой выполните команду:
+ruby 8ball.rb
