--- a/README
+++ b/README
@@ -3,4 +3,4 @@
 Выбор осуществляется из 20-ти случайных вариантов ответа.
 
 Для запуска из папки с программой выполните команду:
-```ruby 8ball.rb```
+ruby 8ball.rb
