--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 8ball является ruby приложением.
 Программа даёт ответ на любой вопрос задуманный пользователем.
-Выбор осуществляется из 20-ти случайных вариантов ответа.
+Выбор ответа осуществляется случайным образом, из 20-ти вариантов.
 
 Для запуска из папки с программой выполните команду:
 ruby 8ball.rb
